# tagged

./: .gitignore  Cargo.toml  LICENSE-AGPL  README.md
.github/workflows/: ci.yml
.zed/snippets/: rust.json
containers/observability/: collector-config.yaml  docker-compose.yaml  grafana-datasources.yaml  loki-config.yaml  prometheus.yaml  tempo-config.yaml
crates/app_galvanized/: Cargo.toml
crates/app_galvanized/src/: iroh_panel_ui.rs  iroh_topic_chat_ui.rs  lib.rs  object_widget.rs  observability.rs  willow_whimsy.rs
crates/app_galvanized/src/components/: onboarding_button.rs  profile_bar.rs  space_dropdown.rs  space_header.rs  space_icon.rs
crates/app_galvanized/src/views/: connections.rs  create_profile_modal.rs  create_space_modal.rs  mod.rs  panel_root.rs  tagged_panel.rs
crates/csh-demo/: Cargo.toml
crates/csh-demo/src/: calendar.rs  chat_bubble.rs  lib.rs
crates/galvanized/: Cargo.toml
crates/galvanized/src/: lib.rs
crates/iroh-automerge/: Cargo.toml
crates/iroh-ui/: Cargo.toml
crates/iroh-ui/src/: iroh_automerge_chat_ui.rs  iroh_panel_ui.rs  iroh_topic_chat_ui.rs  lib.rs  willow.rs
crates/libp2p-ui/: Cargo.toml
crates/libp2p-ui/src/: lib.rs  p2p.rs
crates/plugin-chat/: Cargo.toml
crates/plugin-chat/src/: lib.rs
crates/plugin-iroh/src/: lib.rs
crates/plugin-p2p/: Cargo.toml
crates/plugin-p2p/src/: codec.rs  iroh_repo.rs  lib.rs
crates/plugin-vault/src/: lib.rs  unlock_ui.rs
crates/tagged/: Cargo.toml
crates/tagged/src/: chat.rs  contacts.rs  function_widget.rs  iroh_automerge_chat_ui.rs  iroh_panel_ui.rs  lib.rs  object_widget.rs  willow.rs
crates/tagged/src/components/: mod.rs  onboarding_button.rs  profile_bar.rs  profile_switcher.rs  space_dropdown.rs  space_header.rs  space_icon.rs  tagged_panel.rs
crates/tagged/src/iroh/: mod.rs
crates/tagged/src/scenes/: mod.rs  onboarding_item.rs  tagged_panel.rs
crates/tagged/src/state/: mod.rs  onboarding.rs  profile.rs  space.rs
crates/tagged/src/views/: connections.rs  create_profile_modal.rs  create_space_modal.rs  mod.rs  onboarding_item.rs  tagged_panel.rs
crates/tagged/src/willow/: button_input.rs  mod.rs  model.rs  object_widget.rs  profile.rs  space.rs
crates/tagged/src/willow/tasks/: mod.rs  willow_task.rs
crates/willow-api-derive/: Cargo.toml
crates/willow-api-derive/src/: lib.rs
crates/willow-rummager/: Cargo.toml
crates/willow-rummager/src/: lib.rs  willow_panel.rs  willow_ui.rs
src/: lib.rs  willow_panel.rs  willow_ui.rs
