[workspace]
resolver = "3"
members = [
    "crates/*"
]

[workspace.dependencies]
# samod = { version = "0.5.1", features = ["tokio"] }

anyhow = "1.0.100"
automerge = "0.7"
autosurgeon = "0.10.1"
bytes = "1.11.0"
culpa = "1.0.2"
dashmap = "6.1.0"
data-encoding = "2.10.0"
derive_more = "2.1.0"
dotenvy = "0.15.7"
ed25519-dalek = "2.2.0"
flume = "0.12.0"
futures-concurrency = "7.7.1"
hex = "0.4.3"
iroh = { version = "0.96", features = ["address-lookup-mdns"] }
iroh-blobs = "0.98.0"
iroh-docs = "0.96.0"
iroh-gossip = "0.96.0"
libp2p = { version = "0.54.1", features = ["full"] }
libp2p-stream = "0.2.0-alpha"
libp2p-swarm = "0.45"
palette = "0.7.6"
quote = "1.0.44"
rand = "0.9.2"
rand_core_0_6_4 = { package = "rand_core", version = "0.6.4" }
rand_core = "0.9.2"
schemars = "1.2.1"
samod = { version = "0.5.0", features = ["tokio"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
syn = "2.0.116"
tailwindcss_palette = "0.1.0"
tokio = "1"
tokio-util = "0.7.17"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
tracing = "0.1.43"
ufotofu = { version = "0.8.8", features = ["compat_futures_io"] }
willow25 = { git = "https://codeberg.org/worm-blossom/willow_rs.git" }
zed = { git = "https://github.com/nicholastmosher/zed", branch = "first-class-plugins" }

# Path dependencies
csh-demo = { path = "crates/csh-demo" }
iroh-automerge = { path = "crates/iroh-automerge" }
# iroh-automerge = { path = "../../../../n0-computer/iroh-examples/iroh-automerge" }
# iroh-automerge-repo = { path = "../../../../n0-computer/iroh-examples/iroh-automerge-repo" }
# willow25 = { path = "../../../codeberg.org/worm-blossom/willow_rs/willow25" }
willow-api-derive = { path = "crates/willow-api-derive" }
# zed = { path = "../../../zed/crates/zed" }

[patch.crates-io]
async-task = { git = "https://github.com/smol-rs/async-task.git", rev = "b4486cd71e4e94fbda54ce6302444de14f4d190e" }
notify = { git = "https://github.com/zed-industries/notify.git", rev = "ce58c24cad542c28e04ced02e20325a4ec28a31d" }
notify-types = { git = "https://github.com/zed-industries/notify.git", rev = "ce58c24cad542c28e04ced02e20325a4ec28a31d" }
windows-capture = { git = "https://github.com/zed-industries/windows-capture.git", rev = "f0d6c1b6691db75461b732f6d5ff56eed002eeb9" }
calloop = { git = "https://github.com/zed-industries/calloop" }
livekit = { git = "https://github.com/zed-industries/livekit-rust-sdks", rev = "37835f840d0070d45ac8b31cce6a6ae7aca3f459" }
libwebrtc = { git = "https://github.com/zed-industries/livekit-rust-sdks", rev = "37835f840d0070d45ac8b31cce6a6ae7aca3f459" }
