[package]
name = "galvanized"
description = "Local-first social and productivity platform"
license = "GPL-3.0-or-later"
version = "0.0.0"
edition = "2024"
default-run = "gzed"

[lib]
name = "gzed"
path = "src/lib.rs"

[[bin]]
name = "gzed"
path = "src/bin/main.rs"

[dependencies]
anyhow.workspace = true
automerge.workspace = true
autosurgeon.workspace = true
bytes.workspace = true
# csh-demo.workspace = true
dashmap.workspace = true
data-encoding.workspace = true
derive_more.workspace = true
dotenvy.workspace = true
ed25519-dalek.workspace = true
flume.workspace = true
futures-concurrency.workspace = true
hex.workspace = true
iroh.workspace = true
# iroh-automerge.workspace = true
iroh-blobs.workspace = true
iroh-docs.workspace = true
iroh-gossip.workspace = true
plugin-calendar.workspace = true
plugin-chat.workspace = true
plugin-iroh.workspace = true
plugin-willow.workspace = true
rand.workspace = true
rand_core_0_6_4.workspace = true
rand_core.workspace = true
schemars.workspace = true
samod.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing-subscriber.workspace = true
tracing.workspace = true
ufotofu.workspace = true
willow25.workspace = true
# willow-api-derive.workspace = true
zed.workspace = true

# Path dependencies
# iroh-automerge = { path = "../../../../n0-computer/iroh-examples/iroh-automerge" }
# iroh-automerge-repo = { path = "../../../../n0-computer/iroh-examples/iroh-automerge-repo" }
# zed = { path = "../../../zed/crates/zed" }
