[package]
name = "iroh-automerge"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
automerge = "0.7.2"
bytes = "1.11.0"
derive_more = "2.1.0"
hex = "0.4.3"
iroh = "0.95.1"
rand = "0.9.2"
samod = { version = "0.5.1", features = ["tokio"] }
tokio = "1.48.0"
tokio-util = "0.7.17"
tracing = "0.1.43"
zed = { git = "https://github.com/nicholastmosher/zed", branch = "first-class-plugins" }
