[package]
name = "iroh-ui"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
automerge = "0.7"
bytes = "1.11.0"
data-encoding = "2.10.0"
derive_more = "2.1.0"
flume = "0.12.0"
hex = "0.4.3"
iroh = { version = "0.96", features = ["address-lookup-mdns"] }
iroh-blobs = "0.98.0"
iroh-docs = "0.96.0"
iroh-gossip = "0.96.0"
# iroh-automerge = { path = "../../../../n0-computer/iroh-examples/iroh-automerge" }
iroh-automerge-repo = { path = "../../../../n0-computer/iroh-examples/iroh-automerge-repo" }
rand = "0.9.2"
samod = { version = "0.5.0", features = ["tokio"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = "1"
tokio-util = "0.7.17"
tracing = "0.1.43"
ufotofu = { version = "0.8.8", features = ["compat_futures_io"] }
zed = { path = "../../../zed2/crates/zed" }
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
dotenvy = "0.15.7"
