[package]
name = "tagged" # this is taken on crates.io, but tagt isn't...
version = "0.1.0"
edition = "2024"
default-run = "tagged"

[[bin]]
name = "tagged"
path = "src/bin/main.rs"

[dependencies]
anyhow = "1.0.100"
automerge = "0.7"
autosurgeon = "0.10.1"
bytes = "1.11.0"
data-encoding = "2.10.0"
derive_more = "2.1.0"
dotenvy = "0.15.7"
ed25519-dalek = "2.2.0"
flume = "0.12.0"
hex = "0.4.3"
iroh = { version = "0.96", features = ["address-lookup-mdns"] }
iroh-blobs = "0.98.0"
iroh-docs = "0.96.0"
iroh-gossip = "0.96.0"
# iroh-automerge = { path = "../../../../n0-computer/iroh-examples/iroh-automerge" }
# iroh-automerge-repo = { path = "../../../../n0-computer/iroh-examples/iroh-automerge-repo" }
rand = "0.9.2"
rand_core_0_6_4 = { package = "rand_core", version = "0.6.4" }
rand_core = "0.9.2"
schemars = "1.2.1"
samod = { version = "0.5.0", features = ["tokio"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = "1"
tokio-util = "0.7.17"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
tracing = "0.1.43"
ufotofu = { version = "0.8.8", features = ["compat_futures_io"] }
willow25 = { path = "../../../../../codeberg.org/worm-blossom/willow_rs/willow25" }
willow-api-derive = { path = "../willow-api-derive" }
zed = { git = "https://github.com/nicholastmosher/zed", branch = "first-class-plugins" }
futures-concurrency = "7.7.1"
dashmap = "6.1.0"
