[package]
name = "tagged" # this is taken on crates.io, but tagt isn't...
version = "0.1.0"
edition = "2024"
default-run = "tagged"

[[bin]]
name = "tagged"
path = "src/bin/main.rs"

[dependencies]
anyhow.workspace = true
automerge.workspace = true
autosurgeon.workspace = true
bytes.workspace = true
csh-demo.workspace = true
dashmap.workspace = true
data-encoding.workspace = true
derive_more.workspace = true
dotenvy.workspace = true
ed25519-dalek.workspace = true
flume.workspace = true
futures-concurrency.workspace = true
hex.workspace = true
iroh.workspace = true
iroh-automerge.workspace = true
iroh-blobs.workspace = true
iroh-docs.workspace = true
iroh-gossip.workspace = true
palette.workspace = true
rand.workspace = true
rand_core_0_6_4.workspace = true
rand_core.workspace = true
schemars.workspace = true
samod.workspace = true
serde.workspace = true
serde_json.workspace = true
tailwindcss_palette.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing-subscriber.workspace = true
tracing.workspace = true
ufotofu.workspace = true
willow25.workspace = true
willow-api-derive.workspace = true
zed.workspace = true

# Path dependencies
# iroh-automerge = { path = "../../../../n0-computer/iroh-examples/iroh-automerge" }
# iroh-automerge-repo = { path = "../../../../n0-computer/iroh-examples/iroh-automerge-repo" }
# zed = { path = "../../../zed/crates/zed" }
